# access-undenied-aws

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  requirements.txt  setup.cfg
access_undenied_aws/: __init__.py  analysis.py  cli.py  common.py  event_permission_data.py  iam_policy_data.py  iam_utils.py  organization_node.py  organizations.py  resource_policy_utils.py  result_details.py  results.py  simulate_custom_policy_context_generator.py  simulate_custom_policy_helper.py  simulate_custom_policy_result_analyzer.py
access_undenied_aws/definitions/: access_denied_message_patterns.json
aws_access_undenied/: __init__.py  analysis.py  cli.py  event.py  event_permission_data.py  iam_policy_data.py  iam_utils.py  organization_node.py  organizations.py  resource_policy_utils.py  result_details.py  results.py  simulate_custom_policy_context_generator.py  simulate_custom_policy_helper.py  simulate_custom_policy_result_analyzer.py  utils.py
aws_access_undenied/definitions/: map.json
examples/lambda/: README.md  lambda_handler.py
examples/lambda-cdk/: README.md  app.py  cdk.json  requirements.txt
examples/lambda-cdk/fns/: lambda_handler.py
examples/lambda-cdk/lambda_cdk/: lambda_cdk_stack.py  update_logical_id_aspect.py
examples/lambda-cdk/layer/python/access_undenied_aws/: __init__.py  analysis.py  cli.py  common.py  event.py  event_permission_data.py  iam_policy_data.py  iam_utils.py  organization_node.py  organizations.py  resource_policy_utils.py  result_details.py  results.py  simulate_custom_policy_context_generator.py  simulate_custom_policy_helper.py  simulate_custom_policy_result_analyzer.py  utils.py
examples/lambda-cdk/layer/python/access_undenied_aws/definitions/: access_denied_message_patterns.json  map.json
examples/lambda-cdk/layer/python/aws_error_utils/: __init__.py  aws_error_utils.py
examples/lambda-cdk/layer/python/click_log/: __init__.py  core.py
examples/lambda-cdk/tests/unit/: test_lambda_cdk_stack.py
