[metadata]
name = aws-access-undenied
version = 0.9.0
author = Noam Dahan
author_email = noam@ermetic.com
description = AWS Access Undenied by Ermetic - parses AWS AccessDenied CloudTrail events, explains the reasons for them, and offers actionable fixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ermetic/aws-access-undenied
project_urls =
    Bug Tracker = https://github.com/ermetic/aws-access-undenied/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    aws-error-utils~=2.5.0
    boto3~=1.21.10
    botocore~=1.24.8
    cachetools~=5.0.0
    click~=8.0.4
    click-log~=0.3.2
    colorlog~=6.6.0

[options.packages.find]
include = aws_access_undenied*

[options.package_data]
aws_access_undenied =
    definitions/*.json

[options.entry_points]
console_scripts=
    aws-access-undenied=aws_access_undenied.cli:aws_access_undenied
