[metadata]
name = access-undenied-aws
version = 0.1.2
author = Noam Dahan
author_email = open.source@ermetic.com
description = Access Undenied on AWS by Ermetic - parses AWS AccessDenied CloudTrail events, explains the reasons for them, and offers actionable fixes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ermetic/access-undenied-aws
project_urls =
    Bug Tracker = https://github.com/ermetic/access-undenied-aws/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    aws-error-utils~=2.5.0
    boto3~=1.21.10
    botocore~=1.24.8
    cachetools~=5.0.0
    click~=8.0.4
    click-log~=0.3.2
    colorlog~=6.6.0

[options.packages.find]
include = access_undenied_aws*

[options.package_data]
access_undenied_aws =
    definitions/*.json

[options.entry_points]
console_scripts=
    access-undenied-aws=access_undenied_aws.cli:access_undenied_aws
